--- a/index.html
+++ b/index.html
@@ -2,9 +2,35 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Color Detector</title>
+    <link href="css/main.css" type="text/css" rel="stylesheet">
+    <script type="application/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="application/javascript" src="js/app.js"></script>
 </head>
 <body>
-
+    <form>
+        <fieldset>
+            <label for="color">Color</label>
+            <input type="text" name="color" id="color"/>
+            <input type="color" class="color-selector"/>
+        </fieldset>
+        <fieldset>
+            <label for="bg-color">Background Color</label>
+            <input type="text" name="bg-color" id="bg-color"/>
+            <input type="color" class="color-selector"/>
+        </fieldset>
+        <fieldset>
+            <label for="opacity">Opacity</label>
+            <input name="opacity" type="number" id="opacity" min="0" max="1" step="0.05"/>
+        </fieldset>
+        <fieldset>
+            <label for="result">Original Color</label>
+            <input type="text" name="result" id="result" />
+            <input type="color"/>
+        </fieldset>
+        <fieldset>
+            <input type="button" id="calculate" value="Calculate"/>
+        </fieldset>
+    </form>
 </body>
 </html>
